[package]
name = "rinha-2024Q1-ntex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.1.0", features = ["tokio"] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio" , "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] } 
dotenv = "0.15.0"
derive_more = { version = "=1.0.0-beta.6", features = ["full"] }